# GPSCO

./: CMakeLists.txt  README.md
algorithm/: CMakeLists.txt
algorithm/include/: common.h  costfunction.h  plane_extraction.h  registration.h
algorithm/src/: common.cpp  plane_extraction.cpp  registration.cpp
examples/: CMakeLists.txt  exam_accuracy.cpp  exam_accuracy_apartment.cpp  exam_accuracy_campus.cpp  exam_accuracy_hauptgebaude.cpp  exam_accuracy_hs1.cpp  exam_accuracy_hs2.cpp  exam_accuracy_park.cpp  exam_accuracy_stairs.cpp  exam_display.cpp  exam_overlap.cpp  exam_plane_extraction.cpp  exam_regis.cpp
